--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+/yandexart-fbv5mtrvuc5u1vrlnbkh.jpeg
+/yandexart-fbvbnoab0dgud55feie7.jpeg
+/yandexart-fbve24b6v80jf4vd0uc6.jpeg
+/yandexart-fbvhej6frojm318ijcd0.jpeg
