--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,41 +2,81 @@
 
 name: CreateRelease
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
-    
-  # Allows you to run this workflow manually from the Actions tab
+
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
-          with:
-            distribution: 'zulu'
-            java-version: '17'
-            java-package: 'jdk'
-            cache: 'gradle'
-            
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+          java-package: 'jdk'
+          cache: 'gradle'
+
       - name: Build APK
-        run: | 
-           ./gradlew assembleRelease
-      
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ./gradlew assembleRelease
+
+      - name: Set up Keystore
+        run: |
+          sudo apt update -y || true
+          sudo apt install -y --no-install-recommends coreutils
+          mkdir -p $RUNNER_TEMP/keystores
+          echo "${{ secrets.KEYSTORE_FILE }}" | base64 --decode > $RUNNER_TEMP/keystores/keystore.jks
+
+      - name: Sign APK
+        run: |
+          ANDROID_SDK_PATH=$ANDROID_HOME/build-tools/35.0.0/apksigner
+          $ANDROID_SDK_PATH sign \
+          --ks $RUNNER_TEMP/keystores/keystore.jks \
+          --ks-key-alias ${{ secrets.KEY_ALIAS }} \
+          --ks-pass pass:${{ secrets.KEYSTORE_PASSWORD }} \
+          --key-pass pass:${{ secrets.KEY_PASSWORD }} \
+          --out app-release.apk \
+          app/build/outputs/apk/release/app-release.apk
+
+      - name: Upload APK Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: apk-artifact
+          path: app-release.apk
+          compression-level: 5
+
+  release:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout Changes
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            CHANGE.md
+          sparse-checkout-cone-mode: false
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: apk-artifact
+
+      - name: Generate Changelog
+        run: |
+          cat CHANGE.md > CHANGE.txt
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            app-release.apk
+          body_path: CHANGE.txt
