--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,82 +1,35 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CreateRelease
+name: Build APK on Master Merge
 
 on:
   push:
-    branches: [ "master" ]
-
-  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
           java-version: '17'
-          java-package: 'jdk'
-          cache: 'gradle'
+          distribution: 'temurin'
 
-      - name: Build APK
-        run: |
-          ./gradlew assembleRelease
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
 
-      - name: Set up Keystore
-        run: |
-          sudo apt update -y || true
-          sudo apt install -y --no-install-recommends coreutils
-          mkdir -p $RUNNER_TEMP/keystores
-          echo "${{ secrets.KEYSTORE_FILE }}" | base64 --decode > $RUNNER_TEMP/keystores/keystore.jks
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
-      - name: Sign APK
-        run: |
-          ANDROID_SDK_PATH=$ANDROID_HOME/build-tools/35.0.0/apksigner
-          $ANDROID_SDK_PATH sign \
-          --ks $RUNNER_TEMP/keystores/keystore.jks \
-          --ks-key-alias ${{ secrets.KEY_ALIAS }} \
-          --ks-pass pass:${{ secrets.KEYSTORE_PASSWORD }} \
-          --key-pass pass:${{ secrets.KEY_PASSWORD }} \
-          --out app-release.apk \
-          app/build/outputs/apk/release/app-release.apk
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
 
-      - name: Upload APK Artifact
+      - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: apk-artifact
-          path: app-release.apk
-          compression-level: 5
-
-  release:
-    needs: [ build ]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-      - name: Checkout Changes
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: |
-            CHANGE.md
-          sparse-checkout-cone-mode: false
-
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: apk-artifact
-
-      - name: Generate Changelog
-        run: |
-          cat CHANGE.md > CHANGE.txt
-
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            app-release.apk
-          body_path: CHANGE.txt
+          name: debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
