--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ local.properties
 /yandexart-fbvbnoab0dgud55feie7.jpeg
 /yandexart-fbve24b6v80jf4vd0uc6.jpeg
 /yandexart-fbvhej6frojm318ijcd0.jpeg
+/app/friends_activity_key
