--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
-        android:name=".core.FriendsActivityApplication"
+        android:name=".FriendsActivityApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -26,7 +26,7 @@
             android:foregroundServiceType="health" />
 
         <activity
-            android:name=".core.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.KotlinJC_FriendsActivity_app">
             <intent-filter>
